; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_video.c___getCurrentDisplayPosition.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_video.c___getCurrentDisplayPosition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_viReg = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @__getCurrentDisplayPosition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__getCurrentDisplayPosition(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %8 = load i32*, i32** @_viReg, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 22
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, 2047
  store i32 %11, i32* %6, align 4
  br label %12

12:                                               ; preds = %22, %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %7, align 4
  %14 = load i32*, i32** @_viReg, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 23
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 2047
  store i32 %17, i32* %5, align 4
  %18 = load i32*, i32** @_viReg, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 22
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, 2047
  store i32 %21, i32* %6, align 4
  br label %22

22:                                               ; preds = %12
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %12, label %26

26:                                               ; preds = %22
  %27 = load i32, i32* %5, align 4
  %28 = load i32*, i32** %3, align 8
  store i32 %27, i32* %28, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32*, i32** %4, align 8
  store i32 %29, i32* %30, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
